# DesignMe

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bdesigned/: bdesigned.json
examples/: constuctor_test.py  test_constructor.json  tkinter_window_style_test.json  tkinter_window_test.json  ttk_widget_inspection.py  ttk_widget_style_inpsection.py
src/bdesigned/: __init__.py  bdesigned.py
src/constructor/: __init__.py  bindings.py  constructor.py
src/constructor/constructors/: __init__.py  tkconstructor.py
src/constructor/constuctors/: __init__.py  tkconstuctor.py
src/constructor/defined/: __init__.py  bdefined.py
src/constructor/defined/definitions/: button.json  menu.json  window.json
src/persistance/: __init__.py  persistance.py
src/serializer/: __init__.py  serializer.py
src/serializer/serializers/: __init__.py  tkserializer.py
