[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "serializer"
version = "0.1.0"
description = "Python"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Donald Reilly", email = "donald.reilly.jr@outlook.com" }]
dependencies = []
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[tool.setuptools.packages.find]
where = ["src"]
